--- a/rpg/裝備/armor/冰霜龍王盔甲.yml
+++ b/rpg/裝備/armor/冰霜龍王盔甲.yml
@@ -10,5 +10,8 @@
         所掉落的鱗片鍛造而成
         具有極優良的防禦力
         保護穿戴者的安全
+        裝備時
+        戰鬥中機率觸發技能「冰龍之軀」
+        回復自身10%魔力值 不會超過最大魔力值
     獲取方式: |
         合成
