--- a/rpg/裝備/armor/魅魔女王的緊身衣.yml
+++ b/rpg/裝備/armor/魅魔女王的緊身衣.yml
@@ -13,5 +13,10 @@
         布料雖然好 但用量非常少
         雖然能給予的防禦很少
         但卻能給予大量的攻擊
+        裝備時
+        戰鬥中機率觸發技能「魅魔之軀」
+        回復自身5%血量 不會超過最大血量
+        回復自身10%魔力值 不會超過最大魔力值
+        使敵人3回合內減少30%攻擊力
     獲取方式: |
         合成
