--- a/rpg/職業/戰士.yml
+++ b/rpg/職業/戰士.yml
@@ -26,7 +26,7 @@
         技能介紹: |
             戰士的苦練沒有白費
             這使他獲得更高強的身體
-            每級增加1點力量
+            每級增加3點力量
     劈砍:
         技能等級: 1
         技能類型: "主動"
@@ -37,7 +37,7 @@
             奮力的劈砍
             會帶來更大的戰後疲勞
             損失5%最大生命
-            對敵人造成 (150+((物理攻擊力x0.6)x(技能等級x0.5))+(消耗生命x3)+(體質x5))+(技能等級x30)) 點物理傷害
+            對敵人造成 (200+((物理攻擊力x0.9)x(技能等級x0.8))+(消耗生命x5)+(體質x5))+(技能等級x30)) 點物理傷害
             命中時對敵人造成2回合流血狀態 每回合造成(造成傷害x45%)流血傷害
             生命值低於5%時不可發動
     大刀闊斧:
@@ -50,8 +50,8 @@
             用力揮舞大刀
             會帶來更大的戰後疲勞
             損失10%最大生命
-            對敵人造成 (210+(物理攻擊力x(技能等級x0.5))+(消耗生命x5)+(技能等級x60)) 點物理傷害
-            命中時對敵人造成2回合流血狀態 每回合造成(造成傷害x45%)流血傷害
+            對敵人造成 (250+(物理攻擊力x技能等級)+(消耗生命x7)+(技能等級x60)) 點物理傷害
+            命中時對敵人造成2回合流血狀態 每回合造成(造成傷害x65%)流血傷害
             生命值低於10%時不可發動
     鋼鐵意志:
         技能等級: 15
