--- a/rpg/職業/特殊.yml
+++ b/rpg/職業/特殊.yml
@@ -2,7 +2,7 @@
     無想的一刀:
         技能等級: 1
         技能類型: "主動"
-        消耗MP: 100
+        消耗MP: 80%
         等級上限: 10
         冷卻時間: 10
         技能介紹: |
@@ -22,4 +22,16 @@
             命中時對怪物造成中毒傷害(100x技能等級)點(5x技能等級)回合
             命中時對怪物造成流血傷害(100x技能等級)點(5x技能等級)回合
             命中時對怪物造成凋零傷害(100x技能等級)點(5x技能等級)回合
+    禁咒●魔龍穿心刺:
+        技能等級: 70
+        技能類型: "主動"
+        消耗MP: 75%
+        等級上限: 10
+        冷卻時間: 10
+        技能介紹: |
+            黑暗魔龍的保命絕招
+            因為消耗巨大而不輕易使用
+            對敵人造成 (((力量x150)+(智慧x180)+(物理攻擊力x0.8)+(魔法攻擊力x0.75)+(消耗魔力值x100))x技能等級) 點物理攻擊力
+            使敵人30回合內減少75%防禦
+            此技能絕對命中
         
