edit all class skill

--- a/rpg/職業/刺客.yml
+++ b/rpg/職業/刺客.yml
@@ -28,7 +28,7 @@
         技能介紹: |
             隱於暗中
             並給予敵人致命的一擊
-            對敵人造成 (210+(物理攻擊力x技能等級x0.3)+(技能等級x30)) 點物理傷害
+            對敵人造成 ((物理攻擊力x技能等級x0.3)+(技能等級x30)) 點物理傷害
     毒刺:
         技能等級: 15
         技能類型: "主動"
@@ -38,7 +38,7 @@
         技能介紹: |
             刺客將毒藥塗抹在武器上
             並對敵人進行攻擊
-            對敵人造成 (250+(物理攻擊力x(技能等級x0.5))+(技能等級x40)) 點物理傷害
+            對敵人造成 ((物理攻擊力x(技能等級x0.5))+(技能等級x40)) 點物理傷害
             命中時對敵人贈成3回合中毒狀態 每回合造成(造成傷害x40%)中毒傷害
     隱匿:
         技能等級: 15
