--- a/rpg/職業/弓箭手.yml
+++ b/rpg/職業/弓箭手.yml
@@ -13,7 +13,7 @@
         等級上限: 10
         技能介紹: |
             弓箭手拉弓的臂力不容小覷
-            普攻額外造成(200+(力量x2)+(敏捷x3)+((物理攻擊力x1.5)x技能等級))
+            普攻額外造成((力量x2)+(敏捷x3)+((物理攻擊力x1.5)x技能等級))
     蓄力矢:
         技能等級: 1
         技能類型: "主動"
@@ -23,7 +23,7 @@
         技能介紹: |
             弓箭手將特製的毒藥塗抹在箭矢後
             蓄力瞄準後射在敵人容易毒發的部位上
-            對敵人造成 (300+(物理攻擊力x(技能等級x1.5))+(技能等級x60)) 點物理傷害
+            對敵人造成 ((物理攻擊力x(技能等級x1.5))+(技能等級x60)) 點物理傷害
             命中時對敵人造成4回合中毒狀態 每回合造成(造成傷害x45%)中毒傷害
     靈巧身法:
         技能等級: 1
