--- a/rpg/職業/法師.yml
+++ b/rpg/職業/法師.yml
@@ -41,7 +41,7 @@
         技能介紹: |
             聚集法力於敵人腳底
             隨後迸發出魔法能量貫徹敵人
-            對敵人造成 (200+(魔法攻擊力x技能等級x0.8)+(技能等級x50)) 點魔法攻擊力🔮
+            對敵人造成 ((魔法攻擊力x技能等級x0.8)+(技能等級x50)) 點魔法攻擊力🔮
     魔彈:
         技能等級: 1
         技能類型: "主動"
@@ -50,7 +50,7 @@
         冷卻時間: 3
         技能介紹: |
             對敵人發射魔法飛彈
-            對敵人造成 (350+(魔法攻擊力x技能等級)+(技能等級x80)) 點魔法攻擊力🔮
+            對敵人造成 ((魔法攻擊力x技能等級)+(技能等級x80)) 點魔法攻擊力🔮
     神聖光芒:
         技能等級: 15
         技能類型: "主動"
@@ -60,7 +60,7 @@
         技能介紹: |
             詠唱神聖咒語
             並發出一道神聖光芒
-            對敵人造成 (300+(魔法攻擊力x1.2)x技能等級) 點魔法攻擊力🔮
+            對敵人造成 ((魔法攻擊力x1.2)x技能等級) 點魔法攻擊力🔮
             並回復自己 (魔法攻擊力x技能等級) 點生命值 無法超過最大生命值
     聖光彈:
         技能等級: 15
@@ -71,7 +71,7 @@
         技能介紹: |
             聚集神聖能量
             並發出一道強大的聖光彈
-            對敵人造成 (220+(技能等級x60)+(魔法攻擊力x1.5)x技能等級*0.9) 點魔法攻擊力🔮
+            對敵人造成 ((技能等級x60)+(魔法攻擊力x1.5)x技能等級*0.9) 點魔法攻擊力🔮
     咒焰:
         技能等級: 15
         技能類型: "主動"
@@ -81,7 +81,7 @@
         技能介紹: |
             聚集火焰能量
             並發出一道強大的火焰
-            對敵人造成 (200+(技能等級x40)+(魔法攻擊力x0.75)x技能等級) 點魔法攻擊力🔮
+            對敵人造成 ((技能等級x40)+(魔法攻擊力x0.75)x技能等級) 點魔法攻擊力🔮
             命中時對敵人造成1回合燃燒狀態 每回合造成(造成傷害x50%)燃燒傷害
     邪破彈:
         技能等級: 15
@@ -92,8 +92,7 @@
         技能介紹: |
             聚集邪惡能量
             並發出一道強大的邪破彈
-            dmg = int(300+(skill_lvl*150)+(((players_AP*2)*skill_lvl)*0.7))
-            對敵人造成 (300+(技能等級x150)+(((魔法攻擊力x2)x技能等級)x0.7)) 點魔法攻擊力🔮
+            對敵人造成 ((技能等級x150)+(((魔法攻擊力x2)x技能等級)x0.7)) 點魔法攻擊力🔮
             命中時對敵人造成2回合凋零狀態 每回合造成(造成傷害x50%)凋零傷害
     淨化:
         技能等級: 15
