--- a/rpg/物品/道具/中級天賦領悟書.yml
+++ b/rpg/物品/道具/中級天賦領悟書.yml
@@ -1,10 +1,12 @@
 
-神級技能領悟書:
+中級天賦領悟書:
     裝備類型: 道具
     等級需求: 1
     增加屬性:
-        領悟技能點機率: 100
+        領悟天賦點機率: 30
     道具介紹: |
         一本散發著神秘光芒的書本
         使用後
-        100%機率獲得1點技能點
+        30%機率獲得1點天賦點
+    獲取方式: |
+        世界BOSS掉落
