--- a/rpg/物品/道具/高級天賦領悟書.yml
+++ b/rpg/物品/道具/高級天賦領悟書.yml
@@ -1,12 +1,10 @@
 
-中級技能領悟書:
+高級天賦領悟書:
     裝備類型: 道具
     等級需求: 1
     增加屬性:
-        領悟技能點機率: 30
+        領悟天賦點機率: 50
     道具介紹: |
         一本散發著神秘光芒的書本
         使用後
-        30%機率獲得1點技能點
-    獲取方式: |
-        世界BOSS掉落
+        50%機率獲得1點天賦點
