--- a/rpg/物品/料理/海鮮大雜燴.yml
+++ b/rpg/物品/料理/海鮮大雜燴.yml
@@ -8,9 +8,11 @@
         料理_海鮮大雜燴: 1
         飽食度回復: 70
     道具介紹: |
-        一道融合海鮮的精緻料理
-        以優雅的湯汁和燴煮的蔬菜搭配魚翅
-        呈現出豐富的層次和口感
+        將來自大海的豐盛食材一次匯聚
+        這道海鮮大雜燴彷彿是一場味蕾的冒險
+        在濃郁番茄高湯中慢火熬煮
+        湯頭鮮甜醇厚
+        每一口都是海洋的呼喚
         食用後
         可以獲得一小時的buff
         物理攻擊力+500
