--- a/rpg/物品/料理/鮮肉包.yml
+++ b/rpg/物品/料理/鮮肉包.yml
@@ -4,7 +4,8 @@
     料理等級: 常見
     增加屬性:
         血量回復值: 100
-        飽食度回復: 20
+        魔力回復值: 100
+        飽食度回復: 25
     道具介紹: |
         一個包裹著鮮肉的包子
     獲取方式: |
