--- a/rpg/裝備/accessories/冰晶之翼.yml
+++ b/rpg/裝備/accessories/冰晶之翼.yml
@@ -2,7 +2,9 @@
     裝備類型: 披風
     等級需求: 20
     增加屬性:
+        爆擊率: 4
         閃避率: 8
+        極寒之地套裝: 1
     道具介紹: |
         以極寒之地那萬年不融的冰製作而成的翅膀
     套裝效果: |
