--- a/rpg/配方/烹飪.yml
+++ b/rpg/配方/烹飪.yml
@@ -27,8 +27,8 @@
     熔岩花: 3
     劇毒棘刺: 1
     鹽巴: 2
-    高級魔力藥草: 10
-    高級生命藥草: 10
+    普通魔力藥草: 10
+    普通生命藥草: 10
 海鮮大雜燴:
     小鯉魚: 10
     金魚: 10
