--- a/rpg/職業/弓箭手.yml
+++ b/rpg/職業/弓箭手.yml
@@ -5,15 +5,15 @@
         等級上限: 10
         技能介紹: |
             弓箭手能精準的命中敵人的弱點造成更大的傷害
-            提升(2x技能等級)%爆擊率💥
-            提升(5.5x技能等級)%爆擊傷害🧨
+            提升(1.5x技能等級)%爆擊率💥
+            提升(3.5x技能等級)%爆擊傷害🧨
     強力拉弓:
         技能等級: 1
         技能類型: "被動"
         等級上限: 10
         技能介紹: |
             弓箭手拉弓的臂力不容小覷
-            普攻額外造成((力量x2)+(敏捷x3)+((物理攻擊力x1.5)x技能等級))
+            普攻額外造成((力量x1.5)+(敏捷x2.2)+(技能等級x1.5))
     蓄力矢:
         技能等級: 1
         技能類型: "主動"
