--- a/rpg/職業/刺客.yml
+++ b/rpg/職業/刺客.yml
@@ -40,6 +40,20 @@
             並對敵人進行攻擊
             對敵人造成 ((物理攻擊力x(技能等級x0.5))+(技能等級x40)) 點物理傷害
             命中時對敵人贈成3回合中毒狀態 每回合造成(造成傷害x40%)中毒傷害
+    賭徒之刃:
+        技能等級: 15
+        技能類型: "主動"
+        消耗MP: 15
+        等級上限: 5
+        冷卻時間: 9
+        技能介紹: |
+            身為一個賭狗
+            深知只要賭的起
+            傷害就飛起
+            1/3機率造成(物理攻擊力x0.75) 點物理傷害
+            1/3機率不會造成傷害
+            1/3機率造成(物理攻擊力x3) 點物理傷害
+            等級每提升1級 冷卻-1
     隱匿:
         技能等級: 15
         技能類型: "被動"
