--- a/rpg/職業/刺客.yml
+++ b/rpg/職業/刺客.yml
@@ -8,6 +8,7 @@
             學習並掌握暗殺之道
             使每一次的進攻的可以發會更高破壞力
             每級提升7點爆擊傷害🧨
+            每級提升1.5%破甲率
     收割:
         技能等級: 1
         技能類型: "主動"
@@ -17,7 +18,7 @@
         技能介紹: |
             刺客之道本意為不讓敵人痛苦的死去
             給予奄奄一息的敵人一刀救贖
-            對敵人造成 ((15%敵人已損失生命)+(技能等級x40)) 物理傷害
+            對敵人造成 ((30%敵人已損失生命)+(技能等級x50)) 物理傷害
             (注意!!!在攻擊世界Boss時無法使用!!!)
     暗刺:
         技能等級: 1
@@ -28,7 +29,7 @@
         技能介紹: |
             隱於暗中
             並給予敵人致命的一擊
-            對敵人造成 ((物理攻擊力x技能等級x0.3)+(技能等級x30)) 點物理傷害
+            對敵人造成 ((物理攻擊力x(技能等級x0.5))+(技能等級x70)) 點物理傷害
     毒刺:
         技能等級: 15
         技能類型: "主動"
@@ -38,8 +39,8 @@
         技能介紹: |
             刺客將毒藥塗抹在武器上
             並對敵人進行攻擊
-            對敵人造成 ((物理攻擊力x(技能等級x0.5))+(技能等級x65)) 點物理傷害
-            命中時對敵人贈成3回合中毒狀態 每回合造成(造成傷害x40%)中毒傷害
+            對敵人造成 ((物理攻擊力x(技能等級x0.7))+(技能等級x95)) 點物理傷害
+            命中時對敵人造成3回合中毒狀態 每回合造成(造成傷害x30%)中毒傷害
     賭徒之刃:
         技能等級: 15
         技能類型: "主動"
