--- a/rpg/職業/法師.yml
+++ b/rpg/職業/法師.yml
@@ -41,7 +41,7 @@
         技能介紹: |
             聚集法力於敵人腳底
             隨後迸發出魔法能量貫徹敵人
-            對敵人造成 ((魔法攻擊力x技能等級x0.8)+(技能等級x50)) 點魔法攻擊力🔮
+            對敵人造成 ((魔法攻擊力x(技能等級x0.85))+(技能等級x80)) 點魔法攻擊力🔮
     魔彈:
         技能等級: 1
         技能類型: "主動"
@@ -75,24 +75,24 @@
     咒焰:
         技能等級: 15
         技能類型: "主動"
-        消耗MP: 35
+        消耗MP: 50
         等級上限: 10
         冷卻時間: 3
         技能介紹: |
             聚集火焰能量
             並發出一道強大的火焰
-            對敵人造成 ((技能等級x40)+(魔法攻擊力x0.75)x技能等級) 點魔法攻擊力🔮
+            對敵人造成 ((魔法攻擊力x技能等級)+(技能等級x80)) 點魔法攻擊力🔮
             命中時對敵人造成1回合燃燒狀態 每回合造成(造成傷害x50%)燃燒傷害
     邪破彈:
         技能等級: 15
         技能類型: "主動"
-        消耗MP: 60
+        消耗MP: 80
         等級上限: 10
         冷卻時間: 6
         技能介紹: |
             聚集邪惡能量
             並發出一道強大的邪破彈
-            對敵人造成 ((技能等級x50)+(((魔法攻擊力x1.5)x技能等級)x0.9)) 點魔法攻擊力🔮
+            對敵人造成 ((((魔法攻擊力x1.5)x技能等級)*0.9)+(技能等級x70)) 點魔法攻擊力🔮
             命中時對敵人造成2回合凋零狀態 每回合造成(造成傷害x30%)凋零傷害
     淨化:
         技能等級: 15
