--- a/rpg/物品/料理/變異佛跳牆.yml
+++ b/rpg/物品/料理/變異佛跳牆.yml
@@ -5,7 +5,7 @@
     增加屬性:
         血量回復百分比: 100
         魔力回復百分比: 100
-        料理_佛跳牆: 1
+        料理_變異佛跳牆: 1
         飽食度回復: 100
     道具介紹: |
         一道名為佛跳牆的料理
