--- a/rpg/物品/料理/變異奶油培根義大利麵.yml
+++ b/rpg/物品/料理/變異奶油培根義大利麵.yml
@@ -5,7 +5,7 @@
     增加屬性:
         血量回復百分比: 60
         魔力回復百分比: 60
-        料理_奶油培根義大利麵: 1
+        料理_變異奶油培根義大利麵: 1
         飽食度回復: 50
     道具介紹: |
         一道美味的奶油培根義大利麵
