--- a/rpg/物品/料理/變異海皇魚翅燴蔬.yml
+++ b/rpg/物品/料理/變異海皇魚翅燴蔬.yml
@@ -5,7 +5,7 @@
     增加屬性:
         血量回復百分比: 100
         魔力回復百分比: 100
-        料理_海皇魚翅燴蔬: 1
+        料理_變異海皇魚翅燴蔬: 1
         飽食度回復: 10
     道具介紹: |
         一道融合海鮮的精緻料理
