--- a/rpg/物品/料理/變異紅燒鰻魚.yml
+++ b/rpg/物品/料理/變異紅燒鰻魚.yml
@@ -5,7 +5,7 @@
     增加屬性:
         血量回復百分比: 80
         魔力回復百分比: 80
-        料理_紅燒鰻魚: 1
+        料理_變異紅燒鰻魚: 1
         飽食度回復: 80
     道具介紹: |
         一道美味的紅燒鰻魚
