--- a/rpg/物品/料理/變異海鮮大雜燴.yml
+++ b/rpg/物品/料理/變異海鮮大雜燴.yml
@@ -5,7 +5,7 @@
     增加屬性:
         血量回復百分比: 100
         魔力回復百分比: 100
-        料理_海鮮大雜燴: 1
+        料理_變異海鮮大雜燴: 1
         飽食度回復: 100
     道具介紹: |
         將來自大海的豐盛食材一次匯聚
