武器屬性更新

--- a/rpg/裝備/weapon/幽暗寶石之心--禁術.yml
+++ b/rpg/裝備/weapon/幽暗寶石之心--禁術.yml
@@ -4,12 +4,13 @@
     等級需求: 55
     增加屬性:
         魔法攻擊力: 280
+        增加魔力上限: 900
         爆擊率: 70
         爆擊傷害: 115
-        命中率: 70
+        命中率: 60
     道具介紹: |
         在無盡的黑暗中
-        你的心靈深受幽暗寶石之力的影響。
+        你的心靈深受幽暗寶石之力的影響
         經過了無數次的探索和挑戰
         你的心靈已融合了幽暗之力的神秘能量
         在危急存亡之際 這股力量將被釋放
