--- a/rpg/裝備/weapon/幽暗寶石之心--竊盜.yml
+++ b/rpg/裝備/weapon/幽暗寶石之心--竊盜.yml
@@ -3,13 +3,13 @@
     職業限制: 刺客
     等級需求: 55
     增加屬性:
-        物理攻擊力: 165
+        物理攻擊力: 180
         增加血量上限: 280
         命中率: 85
         閃避率: 120
     道具介紹: |
         在無盡的黑暗中
-        你的心靈深受幽暗寶石之力的影響。
+        你的心靈深受幽暗寶石之力的影響
         經過了無數次的探索和挑戰
         你的心靈已融合了幽暗之力的神秘能量
         在危急存亡之際 這股力量將被釋放
