--- a/rpg/裝備/weapon/精煉矮人之心--影刺.yml
+++ b/rpg/裝備/weapon/精煉矮人之心--影刺.yml
@@ -10,7 +10,7 @@
         經過了無數次的淬鍊和精煉
         你的心靈已然融合了矮人之心的神秘力量
         在生死一瞬間 這股力量會被釋放
-        讓你的理智消失 攻擊力卻達到巅峰
+        讓你的理智消失 攻擊力卻達到巔峰
         深入熔岩深谷的探險 矮人之心吸收了火山魔龍的純淨力量
         這股力量讓你的心靈和戰鬥力達到了新的高度
     獲取方式: |
