--- a/rpg/裝備/weapon/純淨熔岩之心--神聖.yml
+++ b/rpg/裝備/weapon/純淨熔岩之心--神聖.yml
@@ -3,8 +3,9 @@
     職業限制: 法師
     等級需求: 35
     增加屬性:
-        魔法攻擊力: 135
-        增加魔力上限: 500
+        魔法攻擊力: 140
+        增加生命上限: 80
+        增加魔力上限: 200
     道具介紹: |
         你感受到了你的心靈走向
         你領受來自神聖的祝福
