--- a/rpg/裝備/weapon/純淨熔岩之心--禁術.yml
+++ b/rpg/裝備/weapon/純淨熔岩之心--禁術.yml
@@ -3,7 +3,8 @@
     職業限制: 法師
     等級需求: 35
     增加屬性:
-        魔法攻擊力: 160
+        魔法攻擊力: 180
+        增加魔力上限: 500
         爆擊率: 25
         爆擊傷害: 65
     道具介紹: |
