--- a/rpg/配方/合成.yml
+++ b/rpg/配方/合成.yml
@@ -285,16 +285,16 @@
     精煉矮人之心--狂戰: 1
     矮人之心: 3
     幽暗之心: 1
-    迷宮碎片: 60
+    迷宮碎片: 50
     高級的木頭: 90
     高級的礦石: 90
-    神級的木頭: 25
-    神級的礦石: 25
+    超級的木頭: 25
+    超級的礦石: 25
 幽暗寶石之心--劍術:
     精煉矮人之心--劍術: 1
     矮人之心: 3
     幽暗之心: 1
-    迷宮碎片: 60
+    迷宮碎片: 50
     高級的木頭: 90
     高級的礦石: 90
     神級的木頭: 25
@@ -303,7 +303,7 @@
     精煉矮人之心--禁術: 1
     矮人之心: 3
     幽暗之心: 1
-    迷宮碎片: 60
+    迷宮碎片: 50
     高級的木頭: 90
     高級的礦石: 90
     神級的木頭: 25
@@ -312,7 +312,7 @@
     精煉矮人之心--神聖: 1
     矮人之心: 3
     幽暗之心: 1
-    迷宮碎片: 60
+    迷宮碎片: 50
     高級的木頭: 90
     高級的礦石: 90
     神級的木頭: 25
@@ -321,7 +321,7 @@
     精煉矮人之心--竊盜: 1
     矮人之心: 3
     幽暗之心: 1
-    迷宮碎片: 60
+    迷宮碎片: 50
     高級的木頭: 90
     高級的礦石: 90
     神級的木頭: 25
@@ -330,7 +330,7 @@
     精煉矮人之心--影刺: 1
     矮人之心: 3
     幽暗之心: 1
-    迷宮碎片: 60
+    迷宮碎片: 50
     高級的木頭: 90
     高級的礦石: 90
     神級的木頭: 25
@@ -339,7 +339,7 @@
     精煉矮人之心--游擊: 1
     矮人之心: 3
     幽暗之心: 1
-    迷宮碎片: 60
+    迷宮碎片: 50
     高級的木頭: 90
     高級的礦石: 90
     神級的木頭: 25
@@ -348,7 +348,7 @@
     精煉矮人之心--魔靈: 1
     矮人之心: 3
     幽暗之心: 1
-    迷宮碎片: 60
+    迷宮碎片: 50
     高級的木頭: 90
     高級的礦石: 90
     神級的木頭: 25
