--- a/rpg/裝備/weapon/幽暗寶石之心--游擊.yml
+++ b/rpg/裝備/weapon/幽暗寶石之心--游擊.yml
@@ -10,7 +10,7 @@
         閃避率: 95
     道具介紹: |
         在無盡的黑暗中
-        你的心靈深受幽暗寶石之力的影響。
+        你的心靈深受幽暗寶石之力的影響
         經過了無數次的探索和挑戰
         你的心靈已融合了幽暗之力的神秘能量
         在危急存亡之際 這股力量將被釋放
