--- a/rpg/裝備/weapon/幽暗寶石之心--神聖.yml
+++ b/rpg/裝備/weapon/幽暗寶石之心--神聖.yml
@@ -4,11 +4,12 @@
     等級需求: 55
     增加屬性:
         魔法攻擊力: 240
-        增加魔力上限: 900
+        增加生命上限: 200
+        增加魔力上限: 500
         閃避率: 75
     道具介紹: |
         在無盡的黑暗中
-        你的心靈深受幽暗寶石之力的影響。
+        你的心靈深受幽暗寶石之力的影響
         經過了無數次的探索和挑戰
         你的心靈已融合了幽暗之力的神秘能量
         在危急存亡之際 這股力量將被釋放
