--- a/rpg/裝備/weapon/幽暗寶石之心--魔靈.yml
+++ b/rpg/裝備/weapon/幽暗寶石之心--魔靈.yml
@@ -4,14 +4,13 @@
     等級需求: 55
     增加屬性:
         物理攻擊力: 175
-        魔法攻擊力: 175
         爆擊率: 120
         爆擊傷害: 90
         命中率: 140
         閃避率: 75
     道具介紹: |
         在無盡的黑暗中
-        你的心靈深受幽暗寶石之力的影響。
+        你的心靈深受幽暗寶石之力的影響
         經過了無數次的探索和挑戰
         你的心靈已融合了幽暗之力的神秘能量
         在危急存亡之際 這股力量將被釋放
