--- a/rpg/裝備/weapon/精煉矮人之心--神聖.yml
+++ b/rpg/裝備/weapon/精煉矮人之心--神聖.yml
@@ -4,13 +4,14 @@
     等級需求: 45
     增加屬性:
         魔法攻擊力: 190
-        增加魔力上限: 700
+        增加生命上限: 150
+        增加魔力上限: 350
         閃避率: 50
     道具介紹: |
         經過了無數次的淬鍊和精煉
         你的心靈已然融合了矮人之心的神秘力量
         在生死一瞬間 這股力量會被釋放
-        讓你的理智消失 攻擊力卻達到巅峰
+        讓你的理智消失 攻擊力卻達到巔峰
         深入熔岩深谷的探險 矮人之心吸收了火山魔龍的純淨力量
         這股力量讓你的心靈和戰鬥力達到了新的高度
     獲取方式: |
