--- a/rpg/裝備/weapon/精煉矮人之心--竊盜.yml
+++ b/rpg/裝備/weapon/精煉矮人之心--竊盜.yml
@@ -3,7 +3,7 @@
     職業限制: 刺客
     等級需求: 45
     增加屬性:
-        物理攻擊力: 135
+        物理攻擊力: 140
         增加血量上限: 230
         命中率: 65
         閃避率: 90
@@ -11,7 +11,7 @@
         經過了無數次的淬鍊和精煉
         你的心靈已然融合了矮人之心的神秘力量
         在生死一瞬間 這股力量會被釋放
-        讓你的理智消失 攻擊力卻達到巅峰
+        讓你的理智消失 攻擊力卻達到巔峰
         深入熔岩深谷的探險 矮人之心吸收了火山魔龍的純淨力量
         這股力量讓你的心靈和戰鬥力達到了新的高度
     獲取方式: |
