--- a/rpg/配方/合成.yml
+++ b/rpg/配方/合成.yml
@@ -79,8 +79,8 @@
     高級的礦石: 30
 魅魔女王的緊身衣:
     魅魔女王的緊身衣碎片: 20
-    高級的礦石: 30
-    高級的木頭: 30
+    超級的礦石: 30
+    超級的木頭: 30
     荊棘玫瑰: 10
 魅魔女王的祝福:
     魅魔女王的緊身衣碎片: 40
