--- a/rpg/裝備/armor/炎獄龍王盔甲.yml
+++ b/rpg/裝備/armor/炎獄龍王盔甲.yml
@@ -11,7 +11,7 @@
         具有極優良的防禦力
         保護穿戴者的安全
         裝備時
-        戰鬥中機率觸發技能「冰龍之軀」
+        戰鬥中機率觸發技能「炎龍之軀」
         回復自身10%血量 不會超過最大血量
     獲取方式: |
         合成
