--- a/rpg/物品/道具/紫羽狐神●日月粉碎者●銀夢浮絮的寶箱.yml
+++ b/rpg/物品/道具/紫羽狐神●日月粉碎者●銀夢浮絮的寶箱.yml
@@ -5,7 +5,7 @@
         紫羽狐神●日月粉碎者●銀夢浮絮掉落物: 1
     道具介紹: |
         使用本道具後
-        隨機獲得一樣紫羽狐神●日月粉碎者●銀夢浮絮的寶箱掉落物
+        隨機獲得一樣紫羽狐神●日月粉碎者●銀夢浮絮的掉落物
     獲取方式: |
         世界BOSS掉落
         「惡夢迷宮」副本掉落
