部分bug修正 新增彈藥需求

--- a/rpg/職業/弓箭手.yml
+++ b/rpg/職業/弓箭手.yml
@@ -20,6 +20,7 @@
         消耗MP: 13
         等級上限: 10
         冷卻時間: 5
+        消耗彈藥: 1
         技能介紹: |
             弓箭手將特製的毒藥塗抹在箭矢後
             蓄力瞄準後射在敵人容易毒發的部位上
@@ -38,6 +39,7 @@
         消耗MP: 15
         等級上限: 10
         冷卻時間: 6
+        消耗彈藥: 2
         技能介紹: |
             弓箭手將精準瞄準敵人的弱點
             對敵人造成 ((物理攻擊力x2)x(技能等級x2)) 點物理傷害
