--- a/rpg/裝備/card/權杖.yml
+++ b/rpg/裝備/card/權杖.yml
@@ -1,15 +1,14 @@
-魔力提取器:
+權杖:
     裝備類型: 卡牌
     卡牌等級: 高級
     職業限制: 全職業
     等級需求: 20
     增加屬性:
-        魔法攻擊力: 150
-        增加魔力上限: 600
+        魔法攻擊力: 250
+        增加魔力上限: 250
     道具介紹: |
         這張卡片內
-        有一支很高級的魔力提取器
-        讓你在獲得魔力的同時
-        也能提升些許的魔法
+        有一支很高級的權杖
+        看起來無比的神聖
     獲取方式: |
         使用高級卡包取得
