--- a/rpg/裝備/card/玉兔搗藥.yml
+++ b/rpg/裝備/card/玉兔搗藥.yml
@@ -11,9 +11,8 @@
         幸運: 100
     道具介紹: |
         這張卡片內
-        代表著只在神話中流傳的故事
-        玉兔搗藥
-        神秘而優雅的藥師
+        有一段只在神話中流傳的故事
+        玉兔是一名神秘而優雅的藥師
         她的手藝傳世
         能夠從大自然中提煉出令人驚嘆的藥物
         她的草藥園充滿了各種稀有植物
