--- a/rpg/裝備/medal/Alpha測試者勳章.yml
+++ b/rpg/裝備/medal/Alpha測試者勳章.yml
@@ -3,8 +3,8 @@ Alpha測試者勳章:
     增加屬性:
         物理攻擊力: 10
         魔法攻擊力: 10
-        最大生命值: 10
-        最大魔力值: 10
+        增加血量上限: 10
+        增加魔力上限: 10
         防禦值: 10
         破甲率: 5
         物品掉落率: 5
