--- a/rpg/裝備/medal/開發者勳章.yml
+++ b/rpg/裝備/medal/開發者勳章.yml
@@ -3,8 +3,8 @@
     增加屬性:
         物理攻擊力: 100
         魔法攻擊力: 100
-        最大生命值: 100
-        最大魔力值: 100
+        增加血量上限: 100
+        增加魔力上限: 100
         防禦值: 100
         爆擊率: 30
         閃避率: 30
