--- a/rpg/商店/shop.yml
+++ b/rpg/商店/shop.yml
@@ -85,4 +85,10 @@
     暴風之戒: 200
     征服者之墜: 250
 質點商城:
-    尚未開賣: 99999999
+    超級炸彈: 3
+    15%個人經驗加倍卷: 2
+    20%個人經驗加倍卷: 3
+    5%全服經驗加倍卷: 5
+    10%全服經驗加倍卷: 6
+    神級強化晶球: 1
+    神運卷軸: 3
