--- a/rpg/裝備/accessories/幽影披風.yml
+++ b/rpg/裝備/accessories/幽影披風.yml
@@ -13,7 +13,8 @@
         還能讓穿戴者在敵人眼中消失
         使他們無法被發現
 
-        不可上架至拍賣行
+        無法上架至拍賣行
+        無法交易
         無法強化
     套裝效果: |
         PVP銅牌套裝
