--- a/rpg/裝備/accessories/暗影征戰護手.yml
+++ b/rpg/裝備/accessories/暗影征戰護手.yml
@@ -15,7 +15,8 @@
         讓穿戴者能夠迅速地反應和出手
         將敵人擊潰在最短的時間內
 
-        不可上架至拍賣行
+        無法上架至拍賣行
+        無法交易
         無法強化
     套裝效果: |
         PVP銅牌套裝
