--- a/rpg/裝備/accessories/暴風之戒.yml
+++ b/rpg/裝備/accessories/暴風之戒.yml
@@ -13,7 +13,8 @@
         它散發出的能量可以在戰鬥中引起風暴般的破壞
         使得佩戴者在戰鬥中更具威脅性
 
-        不可上架至拍賣行
+        無法上架至拍賣行
+        無法交易
         無法強化
     套裝效果: |
         PVP銅牌套裝
