--- a/rpg/裝備/medal/Alpha測試者勳章.yml
+++ b/rpg/裝備/medal/Alpha測試者勳章.yml
@@ -5,7 +5,7 @@ Alpha測試者勳章:
         魔法攻擊力: 10
         增加血量上限: 10
         增加魔力上限: 10
-        防禦值: 10
+        防禦力: 10
         破甲率: 5
         物品掉落率: 5
         力量: 2
