--- a/rpg/配方/合成.yml
+++ b/rpg/配方/合成.yml
@@ -381,3 +381,11 @@
 鋒利箭矢:
     普通的木頭: 2
     普通的礦石: 1
+食神的中級祝福:
+    食神的初級祝福: 1
+    超級的木頭: 100
+    超級的礦石: 100
+食神的高級祝福:
+    食神的中級祝福: 1
+    神級的木頭: 100
+    神級的礦石: 100
