--- a/rpg/裝備/accessories/征服者之墜.yml
+++ b/rpg/裝備/accessories/征服者之墜.yml
@@ -15,7 +15,8 @@
         據說可以引導佩戴者獲得勝利的力量
         讓他們成為不可戰勝的征服者
 
-        不可上架至拍賣行
+        無法上架至拍賣行
+        無法交易
         無法強化
     套裝效果: |
         PVP銅牌套裝
