--- a/rpg/裝備/medal/開發者勳章.yml
+++ b/rpg/裝備/medal/開發者勳章.yml
@@ -5,7 +5,7 @@
         魔法攻擊力: 100
         增加血量上限: 100
         增加魔力上限: 100
-        防禦值: 100
+        防禦力: 100
         爆擊率: 30
         閃避率: 30
         爆擊傷害: 100
