優化職業專用道具公式

--- a/rpg/裝備/accessories/冰龍祝福.yml
+++ b/rpg/裝備/accessories/冰龍祝福.yml
@@ -12,7 +12,7 @@
         裡面蘊含著來自古老冰龍的祝福
         裝備時
         戰鬥中機率觸發技能「冰龍之怒」
-        對敵人造成 (魔法攻擊力x1.5) 點魔法攻擊力
+        對敵人造成 (魔法攻擊力x1.5) 點魔法傷害
         並對敵人造成3回合寒冷狀態 每回合造成(魔法攻擊力x10%)冰冷傷害
         
         無法強化
