--- a/rpg/裝備/accessories/炎龍祝福.yml
+++ b/rpg/裝備/accessories/炎龍祝福.yml
@@ -11,7 +11,7 @@
         裡面蘊含著來自古老炎龍的祝福
         裝備時
         戰鬥中機率觸發技能「炎龍之怒」
-        對敵人造成 (物理攻擊力x1.2) 點物理攻擊力
+        對敵人造成 (物理攻擊力x1.2) 點物理傷害
         並對敵人造成3回合燃燒狀態 每回合造成(物理攻擊力x7%)燃燒傷害
         
         無法強化
