--- a/rpg/裝備/accessories/暗影征戰護手.yml
+++ b/rpg/裝備/accessories/暗影征戰護手.yml
@@ -20,7 +20,7 @@
         無法強化
     套裝效果: |
         PVP銅牌套裝
-        以下效果均在PVP中生效
+        以下效果僅在PVP中生效
         2件套: 閃避率+20 防禦力+20 爆擊率+20
         3件套: 閃避率+40 防禦力+40 爆擊率+40 爆擊傷害+40
         4件套: 閃避率+60 防禦力+60 爆擊率+60 爆擊傷害+60 血量上限+300
