--- a/rpg/裝備/accessories/魅魔女王的祝福.yml
+++ b/rpg/裝備/accessories/魅魔女王的祝福.yml
@@ -13,7 +13,7 @@
         裡面蘊含著魅魔女王的祝福
         裝備時
         戰鬥中機率觸發技能「魅魔的誘惑」
-        對敵人造成 (魔法攻擊力x2) 點魔法攻擊力
+        對敵人造成 (魔法攻擊力x2) 點魔法傷害
         使敵人3回合內減少30%防禦力
         並使敵人暈眩3回合
         
