--- a/rpg/職業/法師.yml
+++ b/rpg/職業/法師.yml
@@ -20,7 +20,7 @@
             當職業為「法師」時
             法師使用魔法後
             殘留的法力都留存在了手中的法杖當中
-            普攻額外造成((最大魔力值x0.2)+(智慧x1.3)+(技能等級x1.5))
+            普攻額外造成((最大魔力值x0.2)+(智慧x1.3)+(技能等級x1.5)) 傷害
     詠唱:
         技能等級: 1
         技能類型: "主動"
