拜神系統推出

--- a/rpg/物品/道具/神佑之石.yml
+++ b/rpg/物品/道具/神佑之石.yml
@@ -5,7 +5,7 @@
         強化時若加入本輔助道具
         強化失敗時 不會掉階 不會爆炸
 
-        本道具無法直接使用 需要搭配相關功能
+        本道具無法直接使用, 需要搭配相關功能
     獲取方式: |
         「惡夢迷宮」副本掉落
         「夢魘級惡夢迷宮」副本掉落
