技能書取得方式敘述更改

--- a/rpg/物品/技能書/技能書-魔靈之體.yml
+++ b/rpg/物品/技能書/技能書-魔靈之體.yml
@@ -1,15 +1,15 @@
-技能書-淨化:
+技能書-魔靈之體:
     裝備類型: 技能書
-    等級需求: 15
+    等級需求: 30
     學會技能:
-        淨化: 1
+        魔靈之體: 1
     職業限制: 法師
     道具介紹: |
         一本神奇的技能書
-        使用後即可學會一等技能「淨化」
+        使用後即可學會一等技能「魔靈之體」
         若已學會
         將無法使用
         本技能限定「法師」職業學習
         技能介紹可至wiki查看
     獲取方式: |
-        隨機職業技能書(15等)隨機取得
+        隨機職業技能書(30等)隨機取得
