--- a/rpg/職業/法師.yml
+++ b/rpg/職業/法師.yml
@@ -111,4 +111,18 @@
         等級上限: 10
         技能介紹: |
             法師的魔力源源不絕
-            每級增加(技能等級x70)魔力
+            每級增加120點魔力上限
+            每級增加3點智慧
+    魔靈之體:
+        技能等級: 30
+        技能類型: "被動"
+        等級上限: 10
+        技能介紹: |
+            體內流淌著純粹的魔靈能量
+            身軀逐漸脫離凡俗的桎梏
+            賦予法師強化的魔力導引能力與能量耐性
+            使其在施展魔法時能更高效地轉換魔力
+            並減少外來能量對身體的侵蝕
+            每級增加20點魔法攻擊力
+            每級增加10%爆擊傷害
+            每級增加1%破甲率
