--- a/rpg/職業/戰士.yml
+++ b/rpg/職業/戰士.yml
@@ -52,6 +52,7 @@
             損失10%最大生命
             對敵人造成 ((物理攻擊力x技能等級)+(消耗生命x7)+(技能等級x60)) 點物理傷害
             命中時對敵人造成2回合流血狀態 每回合造成(造成傷害x65%)流血傷害
+            命中時35%機率時敵人暈眩2回合
             生命值低於10%時不可發動
     鋼鐵意志:
         技能等級: 15
