實裝機制 當每次攻擊時第一次交互

--- a/rpg/職業/刺客.yml
+++ b/rpg/職業/刺客.yml
@@ -62,3 +62,12 @@
         技能介紹: |
             刺客的隱匿能力極高
             每級提升(技能等級x6)%閃避率
+    偷襲:
+        技能等級: 15
+        技能類型: "被動"
+        等級上限: 5
+        技能介紹: |
+            刺客隱匿在黑暗中
+            伺機對敵人造成致命一擊
+            每次戰鬥中的第一回合 普攻及技能
+            對敵人額外造成 (技能等級 x 8)%傷害
